--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       I consent to the TA storing my new job description to personalize my plan.
     </label>
   </div>
+<p><a href="breakeven.html">→ Break-Even Point Visualization</a></p>
 
   <!-- PROFILE INPUTS -->
   <div class="card">
