--- a/tra.html
+++ b/tra.html
@@ -29,6 +29,18 @@
       <a href="index.html">← Back to TA Home</a>
     </div>
   </div>
+  
+<div class="card" style="margin-top:1rem;">
+  <h2>Next: Understand Your Break-Even Point</h2>
+  <p class="muted">
+    After your Transition Risk Assessment, you can visualize when you'll begin creating more value than you consume during your ramp-up.
+    Use the Break-Even Point tool to calculate your Day 1 cost, estimated value creation curve, and the moment your contribution surpasses your onboarding cost.
+  </p>
+
+  <button onclick="window.location.href='breakeven.html';">
+    Go to Break-Even Point Visualization →
+  </button>
+</div>
 
   <h1>Transition Risk Assessment</h1>
   <p class="muted">3–4 minutes. For each item, mark whether it's relevant to your transition. If relevant, rate difficulty (1–10).</p>
