--- a/tra.html
+++ b/tra.html
@@ -62,6 +62,11 @@
     <textarea id="journal" class="note" placeholder="What patterns do you see? Where will you need allies? What will you deliberately not do in the first 30 days?"></textarea>
   </div>
 
+<div style="margin-top:.5rem; display:flex; gap:.5rem; flex-wrap:wrap;">
+  <button id="getFeedback">Get Feedback</button>
+</div>
+<p id="coachReply" class="muted"></p>
+
   <!-- cache-bust with ?v=3 to avoid stale JS -->
   <script src="tra.js?v=3" defer></script>
 </body>
