--- a/index.html
+++ b/index.html
@@ -181,6 +181,22 @@
       }
     }
 
+<script>
+  (async function() {
+    try {
+      const res = await fetch('config.json', { cache: 'no-store' });
+      if (res.ok) {
+        const cfg = await res.json();
+        if (cfg.backendBase) {
+          localStorage.setItem('acm_backend_base', cfg.backendBase);
+        }
+      }
+    } catch (e) {
+      console.warn('No config.json found or failed to load:', e);
+    }
+  })();
+</script>
+
     // Primary CTA: Save profile & go to TRA
     document.getElementById('save').addEventListener('click', () => {
       const payload = {
