--- a/tra.html
+++ b/tra.html
@@ -5,105 +5,239 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ACM TA — Transition Risk Assessment</title>
   <style>
-    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial; margin: 2rem; line-height: 1.45; }
-    .card { border: 1px solid #ddd; border-radius: 12px; padding: 1rem 1.25rem; margin-bottom: 1rem; }
-    table { width: 100%; border-collapse: collapse; }
-    th, td { border-bottom: 1px solid #eee; padding: 0.5rem; text-align: left; vertical-align: top; }
-    th { position: sticky; top: 0; background: #fafafa; }
-    input[type="number"] { width: 70px; }
-    .actions { display: flex; gap: .5rem; flex-wrap: wrap; }
-    button { padding: 0.6rem 1rem; border-radius: 10px; border: 1px solid #333; background: #111; color: #fff; cursor: pointer; }
-    .muted { color: #666; font-size: .9rem; }
-    .badge { display: inline-block; padding: .25rem .5rem; border-radius: 999px; border: 1px solid #111; }
-    .low { background: #e8f5e9; }
-    .mod { background: #fffde7; }
-    .high { background: #ffebee; }
-    .note { width: 100%; min-height: 100px; }
-    .topbar a { text-decoration: none; }
+    :root {
+      --acm-bg: #f5f5f5;
+      --acm-card: #ffffff;
+      --acm-border: #e5e7eb;
+      --acm-text: #111827;
+      --acm-muted: #6b7280;
+      --acm-accent: #111111;
+    }
 
-    /* Shared buttons (optional; keeps look consistent with index.html) */
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      margin: 0;
+      padding: 2rem 1.25rem 3rem;
+      background: var(--acm-bg);
+      color: var(--acm-text);
+    }
+
+    .shell {
+      max-width: 960px;
+      margin: 0 auto;
+    }
+
+    h1 {
+      font-size: 1.8rem;
+      margin: 0 0 0.25rem;
+    }
+
+    h2 {
+      font-size: 1.1rem;
+      margin: 0 0 0.5rem;
+    }
+
+    .muted {
+      color: var(--acm-muted);
+      font-size: 0.95rem;
+    }
+
+    .card {
+      background: var(--acm-card);
+      border: 1px solid var(--acm-border);
+      border-radius: 12px;
+      padding: 1rem 1.25rem;
+      margin-bottom: 1rem;
+    }
+
+    .topbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 1.25rem;
+      gap: 0.75rem;
+    }
+
+    .topbar-title {
+      font-weight: 600;
+      font-size: 1rem;
+    }
+
+    .topbar a {
+      font-size: 0.9rem;
+      text-decoration: none;
+      color: var(--acm-accent);
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    th, td {
+      border-bottom: 1px solid #f3f4f6;
+      padding: 0.5rem;
+      text-align: left;
+      vertical-align: top;
+      font-size: 0.9rem;
+    }
+
+    th {
+      position: sticky;
+      top: 0;
+      background: #f9fafb;
+      z-index: 1;
+    }
+
+    input[type="number"] {
+      width: 70px;
+    }
+
+    input[type="text"] {
+      width: 100%;
+    }
+
+    .actions {
+      display: flex;
+      gap: 0.5rem;
+      flex-wrap: wrap;
+    }
+
+    /* Button styles aligned with index.html */
     .btn {
       display: inline-block;
       padding: 0.6rem 1rem;
       border-radius: 10px;
-      border: 1px solid #333;
+      border: 1px solid #111;
       background: #111;
       color: #fff;
       font-weight: 600;
+      font-size: 0.9rem;
       cursor: pointer;
       text-decoration: none;
     }
+
     .btn-secondary {
       background: #fff;
       color: #111;
-      border: 1px solid #333;
+    }
+
+    .btn:disabled {
+      opacity: 0.55;
+      cursor: not-allowed;
+    }
+
+    .badge {
+      display: inline-block;
+      padding: 0.2rem 0.55rem;
+      border-radius: 999px;
+      border: 1px solid #111;
+      font-size: 0.8rem;
+    }
+
+    .low {
+      background: #e8f5e9;
+    }
+
+    .mod {
+      background: #fffde7;
+    }
+
+    .high {
+      background: #ffebee;
+    }
+
+    .note {
+      width: 100%;
+      min-height: 100px;
+      padding: 0.6rem;
+      border-radius: 8px;
+      border: 1px solid #d1d5db;
+      font-family: inherit;
+      font-size: 0.95rem;
+      resize: vertical;
     }
   </style>
 </head>
 <body>
-  <div class="topbar" style="display:flex; justify-content:space-between; align-items:center; margin-bottom: 1rem;">
-    <div><strong>Paul Bickford Solutions • Advanced Career Mastery</strong></div>
-    <div class="actions">
-      <a href="index.html">← Back to TA Home</a>
+  <div class="shell">
+    <!-- Top bar with program name and back link -->
+    <div class="topbar">
+      <div class="topbar-title">Paul Bickford Solutions • Advanced Career Mastery</div>
+      <div class="actions">
+        <a href="index.html">← TA Home</a>
+      </div>
+    </div>
+
+    <!-- Page heading -->
+    <div class="card">
+      <h1>Transition Risk Assessment</h1>
+      <p class="muted">
+        3–4 minutes. For each item, mark whether it's relevant to your transition. If relevant, rate difficulty (1–10). 
+        Your Transition Risk Index helps you and the ACM TA focus your first 90 days.
+      </p>
+    </div>
+
+    <!-- Assessment table -->
+    <div class="card">
+      <h2>1. Rate Your Transition Demands</h2>
+      <table id="traTable">
+        <thead>
+          <tr>
+            <th style="width:55%;">Action</th>
+            <th style="width:10%;">Relevant?</th>
+            <th style="width:15%;">Difficulty (1–10)</th>
+            <th style="width:20%;">Notes (optional)</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
+
+    <!-- Score summary -->
+    <div class="card">
+      <h2>2. Your Risk Index</h2>
+      <p class="muted" style="margin-bottom:0.5rem;">
+        Your score will guide where to focus learning, early wins, and stakeholder support.
+      </p>
+      <div class="actions" style="margin-bottom:0.5rem;">
+        <button class="btn" id="calc">Calculate Risk Index</button>
+        <button class="btn btn-secondary" id="save">Save Progress</button>
+        <button class="btn btn-secondary" id="clear">Clear</button>
+      </div>
+      <p id="result" class="muted"></p>
+    </div>
+
+    <!-- Journal + coaching -->
+    <div class="card">
+      <h2>3. Journal & Coaching</h2>
+      <p class="muted">
+        Capture concerns or insights that surfaced. This will help the ACM TA give more precise guidance 
+        and shape your 30/60/90 and early wins.
+      </p>
+      <textarea
+        id="journal"
+        class="note"
+        placeholder="What patterns do you see? Where will you need allies? What will you deliberately not do in the first 30 days?"
+      ></textarea>
+
+      <div class="actions" style="margin-top:0.75rem;">
+        <button class="btn btn-secondary" id="getFeedback">Get Feedback from ACM TA</button>
+      </div>
+
+      <p
+        id="coachReply"
+        class="muted"
+        style="margin-top:1rem; white-space:pre-wrap;"
+      ></p>
     </div>
   </div>
 
-  <h1>Transition Risk Assessment</h1>
-  <p class="muted">3–4 minutes. For each item, mark whether it's relevant to your transition. If relevant, rate difficulty (1–10).</p>
-
-  <div class="card">
-    <table id="traTable">
-      <thead>
-        <tr>
-          <th style="width:55%;">Action</th>
-          <th style="width:10%;">Relevant?</th>
-          <th style="width:15%;">Difficulty (1–10)</th>
-          <th style="width:20%;">Notes (optional)</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
-
-  <div class="card">
-    <div class="actions">
-      <button id="calc">Calculate Risk Index</button>
-      <button id="save">Save Progress</button>
-      <button id="clear">Clear</button>
-    </div>
-    <p id="result" class="muted"></p>
-  </div>
-
-  <div class="card">
-    <h2>Journal (Optional)</h2>
-    <p class="muted">Capture concerns or insights that surfaced. This helps shape your 30/60/90 and early wins.</p>
-    <textarea id="journal" class="note" placeholder="What patterns do you see? Where will you need allies? What will you deliberately not do in the first 30 days?"></textarea>
-
-    <!-- Correct placement: inside the card -->
-    <div style="margin-top:.75rem; display:flex; gap:.5rem; flex-wrap:wrap;">
-      <button class="btn" id="getFeedback" type="button">Get Feedback from ACM TA</button>
-    </div>
-
-    <!-- Where the TA output appears -->
-    <p id="coachReply" class="muted" style="margin-top:1rem; white-space:pre-wrap;" aria-live="polite"></p>
-  </div>
-
-  <!-- cache-bust with ?v=3 to avoid stale JS -->
-  <script>
-  (async function() {
-    try {
-      const res = await fetch('config.json', { cache: 'no-store' });
-      if (res.ok) {
-        const cfg = await res.json();
-        if (cfg.backendBase) {
-          localStorage.setItem('acm_backend_base', cfg.backendBase);
-        }
-      }
-    } catch (e) {
-      console.warn('No config.json found or failed to load:', e);
-    }
-  })();
-</script>
-<script src="tra.js?v=5" defer></script>
+  <!-- cache-bust with ?v=5 to avoid stale JS -->
+  <script src="tra.js?v=5" defer></script>
 </body>
 </html>
