--- a/problem-preferences.html
+++ b/problem-preferences.html
@@ -126,6 +126,56 @@
   </div>
 
   <!-- Version parameter to avoid cached JS -->
-  <script src="problem-preferences.js?v=1" defer></script>
+
+    <div class="card">
+    <h2>Part 3 — Reflect & Get Coaching</h2>
+    <p class="muted">
+      Based on your interest ratings and the matrix, capture what this says about where you like
+      to solve problems—and where you may be less inclined to lean in.
+    </p>
+
+    <textarea
+      id="ppJournal"
+      class="note"
+      placeholder="What spheres do you enjoy solving problems in? Where are you least eager?
+What are the implications for potential vulnerabilities in your new position?"
+    ></textarea>
+
+    <div style="margin-top:.75rem; display:flex; gap:.5rem; flex-wrap:wrap;">
+      <button id="ppGetFeedback">Get Feedback from ACM TA</button>
+    </div>
+
+    <!-- Where the TA's response will show -->
+    <p id="ppCoachReply" class="muted" style="margin-top:1rem; white-space:pre-wrap;"></p>
+  </div>
+
+  <!-- bump version to avoid old JS in browser cache -->
+  <script src="problem-preferences.js?v=2" defer></script>
+</body>
+</html>
+  <div class="card">
+    <h2>Part 3 — Reflect & Get Coaching</h2>
+    <p class="muted">
+      Based on your interest ratings and the matrix, capture what this says about where you like
+      to solve problems—and where you may be less inclined to lean in.
+    </p>
+
+    <textarea
+      id="ppJournal"
+      class="note"
+      placeholder="What spheres do you enjoy solving problems in? Where are you least eager?
+What are the implications for potential vulnerabilities in your new position?"
+    ></textarea>
+
+    <div style="margin-top:.75rem; display:flex; gap:.5rem; flex-wrap:wrap;">
+      <button id="ppGetFeedback">Get Feedback from ACM TA</button>
+    </div>
+
+    <!-- Where the TA's response will show -->
+    <p id="ppCoachReply" class="muted" style="margin-top:1rem; white-space:pre-wrap;"></p>
+  </div>
+
+  <!-- bump version to avoid old JS in browser cache -->
+  <script src="problem-preferences.js?v=2" defer></script>
 </body>
 </html>
